--- a/simple/layer_first/packages/todo_repository/pubspec.yaml
+++ b/simple/layer_first/packages/todo_repository/pubspec.yaml
@@ -1,4 +1,4 @@
-name: layer_first_api
+name: todo_repository
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
 # homepage: https://www.example.com
@@ -7,13 +7,10 @@ environment:
   sdk: '>=2.17.7 <3.0.0'
 
 dependencies:
-  http: ^0.13.5
-  json_annotation: ^4.7.0
+  layer_first_api:
+    path: ../layer_first_api
 
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
-  build_runner: ^2.3.2
-  json_serializable: ^6.5.4
-  meta: ^1.8.0
   mocktail: ^0.3.0
